add some styling

--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -1,43 +1,93 @@
-p {
-    color: blue;
+header, footer {
+    border: 4px solid rgb(248, 165, 0);
+    /* text-align: left; */
+    /* background-color: black; */
+    color: white;
+    max-width: 100%;
+    min-width: 100%;
+    height:150px;
+    background-color: rgb(248, 165, 0);
 }
 
 body {
-    background-color: #e58a23;
-    font-family: 'Opan Sans', 'Arial', 'Helvetica';    
+    background-color: #fafafa;
+    font-family: 'Opan Sans', 'Arial', 'Helvetica'; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* box-sizing:border-box;    */
 }
 
 h1, h2 {
-    color: white;
+    color: rgb(91, 161, 17);
+    line-height: 58px
+}
+
+h3 {
+    color:#413b36;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 35px;
+}
+
+p {
+    font-size: 16px;
+    line-height:19px;
+}
+
+/* Intro: class for the div wrapping the intro and hero image within description */
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
 }
 
 img {
     /* width:32%; */
-    max-width: 500px;
+    max-width: 75%;
 }
 
-.description{
-    max-width: 600px;
+.container {
+    max-width: 75%;
 }
-
-.top {
+.titleSection, .description, .prepInstructions {
     float: center;
     max-width: 600px;
 }
-.left {
+/* .description {
     float: left;
-    max-width: 600px;
+    max-width: 599px;
 }
-.right {
+.prepInstructions {
     float: right;
-    max-width: 600px;
+    max-width: 599px;
     margin-left: 30px;
-}
+} */
 
+/* .titleSection {
+    float: center;
+    max-width: 600px;
+}
+.description {
+    float: left;
+    max-width: 599px;
+}
+.prepInstructions {
+    float: right;
+    max-width: 599px;
+    margin-left: 30px;
+} */
+
+#prepInfo {
+    min-width: 400px;
+}
 .prepItem {
     border: 2px dashed black;
     display: inline-block;
@@ -53,10 +103,25 @@ img {
 
 /* Media Queries */
 /* For tablet size or smaller */
-@media(max-width: 481px) {
+@media(max-width: 458px) {
     img {
-        width: 500px;
+        width: 100%;
         border: 20px solid black;
+        padding: 10px;
+        margin: 20px;
+    }
+    .description, .prepInstructions {
+        /* float: center; */
+        width: 100%;
+        min-width: 300px;
+    }
+    /* .prepInstructions { */
+        /* float: center; */
+        /* width: 100%; */
+    /* } */
+
+    #prepInfo {
+        min-width: 300px;
     }
 } 
 
