--- a/projects/bank-account/style.css
+++ b/projects/bank-account/style.css
@@ -5,3 +5,7 @@
     padding: 15px;
     color: white;
 }
+
+#wrapper {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
