--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -5,7 +5,7 @@ header, footer {
     color: white;
     max-width: 100%;
     min-width: 100%;
-    height:150px;
+    height:auto;
     background-color: rgb(248, 165, 0);
 }
 
@@ -49,7 +49,7 @@ body {
       left: -250px;
       width: 200px;
       height: 100%;
-      background-color: #3D0E61;
+      background-color: #122952;
       transition: 0.3s;
       padding: 0px 10px;
       box-sizing: border-box;
@@ -224,9 +224,21 @@ footer {
     justify-content: center;
 }
 
-#logoFooter {
-    max-width: 500px;
+.footerDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around
 }
+
+#logoFooter {
+    margin-top: 10%;
+    width: 400px;
+
+}
+.logoFtrDiv, .footerDescription, .socialMedia{
+    max-width: 30%;
+}
+
 /* Media Queries */
 /* For tablet size or smaller */
 @media(max-width: 966px) {
@@ -251,11 +263,11 @@ footer {
         margin-bottom: 20px;
     }
 
-    #logoFooter {
+    /* #logoFooter {
         display: inline-block;
         min-width: 20%;
-        max-width: 100%;
-    }
+        max-width: 30%;
+    } */
 
     .overlay {
         border: 2px solid black;
@@ -305,7 +317,34 @@ footer {
         min-width: 300px;
     }
 
+    /* Footer in smaller screen */
+    .footerDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     
+    #logoFooter {
+        max-width: 100%;    
+    }
+
+    .footerDescription {
+        margin: 1rem;
+        padding: 3rem;
+        text-align: center;
+        /* border: 2px solid black; */
+    }
+
+    .socialMedia li {
+        display: inline-block;
+    }
+
+    .logoFtrDiv, .footerDescription, .socialMedia{
+        height: auto;
+        /* width: 100%; */
+        max-width: 100%;
+    }
+
 } 
 
 @media (max-width: 330px) {
