--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -49,7 +49,7 @@ body {
       left: -250px;
       width: 200px;
       height: 100%;
-      background-color: #122952;
+      background-color: #3D0E61;
       transition: 0.3s;
       padding: 0px 10px;
       box-sizing: border-box;
@@ -239,6 +239,13 @@ footer {
     max-width: 30%;
 }
 
+.socialMedia li {
+    list-style: none;
+}
+.socialMediaIcons {
+    height: 38px;
+    width: 50px;
+}
 /* Media Queries */
 /* For tablet size or smaller */
 @media(max-width: 966px) {
@@ -337,6 +344,11 @@ footer {
 
     .socialMedia li {
         display: inline-block;
+    }
+
+    .socialMediaIcons {
+        height: 50px;
+        width: 50px;
     }
 
     .logoFtrDiv, .footerDescription, .socialMedia{
