--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -17,6 +17,23 @@ body {
     min-width: 470px;
   }
 
+/* Jump to Recipe Button */
+.jumpBtn {
+    z-index: 1;
+    background-color: white;
+    border: 1px dotted blue;
+    font-family: 'Arvo', 'Arial', 'Helvetica'; 
+    font-weight: 700;
+    font-size: 15px;
+    padding: 25px;
+    border-radius: 100%;
+    height: 170px;
+}
+
+#arrow {
+    width: 10px;
+    height: 10px;
+}
 /* Hamburger Menu Nav */
 
 #burgerLogo {
