--- a/projects/bank-account/style.css
+++ b/projects/bank-account/style.css
@@ -1,3 +1,9 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #div1h2 {
     border-radius: 10px;
     border: 2px solid blue;
@@ -6,8 +12,12 @@
     color: white;
 }
 
+#wrapper {
+    align-self: center;
+}
 #wrapper, #summaryDiv {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* margin: 100px; */
 }
 
 #summaryDiv {
